appId: com.gabrielmoreira.reactnativesecurestorageexample
---
- launchApp:
    stopApp: true
- extendedWaitUntil:
    visible: "React Native Secure Storage Example"
    timeout: 30000
- assertVisible: "React Native Secure Storage Example"
- tapOn:
    id: "select-backend-expoSecureStore"
- assertVisible:
    id: "selected-backend-label"
- assertVisible: "Configured token"
- scrollUntilVisible:
    element:
      id: "selected-property-options"
    direction: DOWN
- scrollUntilVisible:
    element:
      id: "action-set"
    direction: DOWN
- tapOn:
    id: "action-set"
- scrollUntilVisible:
    element:
      id: "action-get"
    direction: DOWN
- tapOn:
    id: "action-get"
