appId: com.gabrielmoreira.reactnativesecurestorageexample
---
- launchApp:
    stopApp: true
- extendedWaitUntil:
    visible:
      id: "select-backend-reactNativeSensitiveInfo"
    timeout: 30000
- tapOn:
    id: "select-backend-reactNativeSensitiveInfo"
- scrollUntilVisible:
    element:
      id: "selected-property-options"
    direction: DOWN
- scrollUntilVisible:
    element:
      id: "action-set"
    direction: DOWN
- tapOn:
    id: "action-set"
- scrollUntilVisible:
    element:
      id: "action-get"
    direction: DOWN
- tapOn:
    id: "action-get"
